Added first parser tests