@@ -1,5 +1,7 @@
 package mef40.parser;
 
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableSet;
 import mef40.NonTerminal;
 import mef40.Terminal;
 import mef40.Token;
@@ -8,7 +10,7 @@ import java.util.*;
 
 public class Parser {
     // The grammar for my parser
-    private static final List<Production> grammar = List.of(
+    public static final ImmutableList<Production> grammar = ImmutableList.of(
             new Production(NonTerminal.START, NonTerminal.EXPR),
             new Production(NonTerminal.EXPR, NonTerminal.EXPR, Terminal.PLUS, NonTerminal.DIFF),
             new Production(NonTerminal.EXPR, NonTerminal.DIFF),
@@ -21,7 +23,9 @@ public class Parser {
             new Production(NonTerminal.OPTFACT, NonTerminal.OPTFACT, Terminal.FACTORIAL),
             new Production(NonTerminal.OPTFACT, NonTerminal.STATEMENT),
             new Production(NonTerminal.STATEMENT, Terminal.OPEN, NonTerminal.EXPR, Terminal.CLOSE),
-            new Production(NonTerminal.STATEMENT, NonTerminal.FLOAT)
+            new Production(NonTerminal.STATEMENT, NonTerminal.FLOAT),
+            new Production(NonTerminal.FLOAT, Terminal.MINUS, Terminal.UFLOAT),
+            new Production(NonTerminal.FLOAT, Terminal.UFLOAT)
     );
 
     private static final ParsingTable table = new ParsingTable(grammar);
@@ -37,22 +41,38 @@ public class Parser {
         Queue<Token> w$ = new LinkedList<>(tokens);
         w$.add(new Token(Terminal.$));
 
-        Stack<Set<Item>> states = new Stack<>();
+        Stack<ImmutableSet<Item>> states = new Stack<>();
         states.add(table.initialState);
 
         List<Production> out = new ArrayList();
 
-        var a = w$.peek().tag;
+        var a = w$.poll().tag;
         while (true) {
-            var s = states.peek(); // INIT STACK WITH SOMETHING?
+            var s = states.peek();
 
-            Action action = table.ACTION(s, a);
-            if (action.getClass().equals(Shift.class)) {
+            var action = table.ACTION(s, a);
 
+            if (action == null) {
+                // Error
+            } else if (action.getClass().equals(Shift.class)) {
+                var state = ((Shift) action).state;
+
+                states.push(state);
+                a = w$.poll().tag;
+            } else if (action.getClass().equals(Reduce.class)) {
+                var production = ((Reduce) action).production;
+
+                for (int i = 0; i < production.size(); i++) {
+                    states.pop();
+                }
+
+                states.push(table.GOTO(states.peek(), production.head));
+                out.add(production);
+            } else if (action.getClass().equals(Accept.class)) {
+                break;
             }
-
         }
 
-
+        return out;
     }
 }
